econImpactRegime.form - correction of visibility ReferenceLookup

--- a/main/newDesign.css
+++ b/main/newDesign.css
@@ -238,8 +238,8 @@ div.checkbox.component.editor.m8-checkbox.cautionUnderline {
   	min-height: 80vh;
 }
 
-.minHeight15vh{
-	min-height: 15vh;
+.minHeight19vh{
+	min-height: 19vh;
 }
 
 .minimalTabPageHeight{
@@ -444,7 +444,8 @@ div.panel.tabs-detail div.sffw-tabs ul[role=tablist] > li.sffw-tab.enhancement-a
 
 /* -- National Enhancement -- */
 div.component.editor.enumradiogroup.enumradiogroup-horizontal.enhancement-attention-needed, div.component.container.panel.enhancement-attention-needed {
-	border-bottom: 2px dotted var(--live-orange-color)
+	border: 2px dotted var(--live-orange-color);
+	border-right: 0;
 }
 
 div.component.editor.enumradiogroup.enumradiogroup-horizontal.enhancement-attention-needed::before, div.component.container.panel.enhancement-attention-needed::before {
@@ -467,14 +468,14 @@ div.component.container.panel.enhancement-attention-needed::before {
     color: var(--live-orange-color);
     font-size: 1.5rem;
     position: absolute;
-    left: -1rem;
-    top: 0rem;
+    left: -0.5rem;
+    top: -1.0rem;
     opacity: 0.75;
 }
 
 div.component.editor.enumradiogroup.enumradiogroup-horizontal.enhancement-attention-needed[data-name="simplifiedReleaseProcedureRg"]::before{
-	left: 36vw;
-	top: -10px;
+	left: 720px;
+    top: -21px;
 }
 
 div.component.container.container-component[data-name="pnlNarodniUdaje"] > div.panel-table div.panel-auto-fit-height.panel-cell.panel-h-stretch {
